# python-starter

./: .dockerignore  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  AGENTS.md  CREDITS.md  Dockerfile  Dockerfile.goreleaser  Makefile  README.md  docker-compose.yml  pyproject.toml  python-starter.key  python-starter.pub  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: attest.yaml  ci.yaml  pre-commit-autoupdate.yaml  release.yaml  weekly-docker-refresh.yaml
python_starter/: __main__.py  cli.py
scripts/: completions.sh  manpages.sh  update_python_version.sh  use_starter.sh
tests/: test_cli.py
